fixing up application and adding some more dedicated service classes